[package]
name = "kamino_lending"
version = "1.11.0"
description = "Kamino lending Solana program"
edition = "2021"
license = "BUSL-1.1"
publish = false


[lib]
crate-type = ["cdylib", "lib"]
name = "kamino_lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
serde = ["dep:serde", "fixed/serde-str"]
staging = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
tracing = ["dep:tracing"]
serialize_caps_interval_values = []

[dependencies]
tokio         = "1.43.0"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
dotenv        = "0.15.0"
lazy_static   = "1.5.0"
clap          = "4.5.26"
log           = "0.4.25"
env_logger    = "0.11.6"

anchor-client = { version = "0.30.1", features = ["async"] }
anchor-lang   = "0.30.1"
anchor-spl    = "0.30.1"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "e1e35e0c4f4943da0a99ceb8477c421dcfae2c33"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"
