[package]
name = "kamino_lending"
version = "1.11.0"
description = "Kamino lending Solana program"
edition = "2021"
license = "BUSL-1.1"
publish = false


[lib]
crate-type = ["cdylib", "lib"]
name = "kamino_lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
serde = ["dep:serde", "fixed/serde-str"]
staging = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
tracing = ["dep:tracing"]
serialize_caps_interval_values = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
solana-program.workspace = true
solana-security-txt = "1.1.1"

borsh.workspace = true
bytemuck.workspace = true

sbod-itf = { git = "https://github.com/Kamino-Finance/scope.git", features = ["no-entrypoint"] }
scope = { git = "https://github.com/Kamino-Finance/scope.git", package = "scope-types" }
pyth-solana-receiver-sdk = "0.3.1"

farms = { git = "https://github.com/Kamino-Finance/kfarms.git", features = ["no-entrypoint"] }

derivative = "2.2.0"
num_enum = "0.7.0"
strum = { git = "https://github.com/Kamino-Finance/strum", features = ["derive"], branch = "checked_arithmetics" }

static_assertions = "1.1.0"

derive_builder = "0.13.0"

fixed = { version = "1.23.1" }
fixed-macro = "1.1"
uint = "0.9.5"
bitflags = "2.4.1"

# Consolidated serde definition, made optional
serde = { version = "1", features = ["derive"], optional = true }
tracing = { version = "0.1.40", optional = true }
tokio = "1.43.0"
serde_json = "1"
dotenv = "0.15.0"
lazy_static = "1.5.0"
clap = "4.5.26"
log = "0.4.25"
env_logger = "0.11.6"

anchor-client = { version = "0.30.1", features = ["async"] }
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
